# stonex-cms-amqp-test-engine

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
Configuration/: CMakeLists.txt
Configuration/include/Configuration/: CMSClientTestConfiguration.h  CMSExceptionsConfiguration.h  ConnectionConfiguration.h  ConsumerConfiguration.h  DefaultTerminationType.h  ProducerConfiguration.h  SessionConfiguration.h  TestCaseConfiguration.h  TestCaseMessageReceiverConfiguration.h  TestCaseVerifierConfiguration.h
Configuration/src/Configuration/: CMSClientTestConfiguration.cpp  CMSExceptionsConfiguration.cpp  ConnectionConfiguration.cpp  DefaultTerminationType.cpp  SessionConfiguration.cpp  TestCaseConfiguration.cpp  TestCasePerformerConfiguration.cpp  TestCaseProducerConfiguration.cpp  TestCaseVerifierConfiguration.cpp  TestSuiteConfiguration.cpp
ConfigurationParser/: CMakeLists.txt
MessageContent/: CMakeLists.txt
MessageContent/Test/: CMakeLists.txt  main.cpp
MessageContent/include/MessageContent/: MessageDestinationTestField.h  MessageProperties.h  MessageTestField.h
MessageContent/src/ConfigurationParser/: MessageFieldConfigParser.cpp
MessageContent/src/MessageContent/: MessageDestinationTestField.cpp  MessageProperties.cpp  MessageTestField.cpp
MessageContentVerifiers/: CMakeLists.txt
MessageContentVerifiers/include/MessageContentVerifiers/: ExpectedField.h  FieldVerifierFactory.h  VerifierStatus.h
MessageContentVerifiers/src/MessageContentVerifiers/: ExpectedField.cpp  FieldVerifierFactory.cpp
MessageDecorator/Test/: CMakeLists.txt
MessageReceiver/: CMakeLists.txt
MessageReceiver/Test/: CMakeLists.txt  main.cpp  test_message_decorating_counting_receiver.config  test_message_decorating_receiver.config  test_message_decorating_receiver_to_file.config
MessageReceiver/include/Configuration/: FileMessageReceiverConfiguration.h  TestCaseMessageReceiverConfiguration.h
MessageReceiver/include/ConfigurationParser/: TestCaseMessageReceiverConfigurationParser.h
MessageReceiver/include/Listener/: VerifyingListener.h
MessageReceiver/include/MessageReceiver/: CMSMessageListenerFactory.h  MessageCountingFileReceiver.h  MessageReceiverFactory.h  TestMessageReceiver.h
MessageReceiver/include/Verifier/: MessageReceiverVerifier.h  MessageVerifier.h
MessageReceiver/src/Configuration/: FileMessageCountingDecoratingReceiverConfiguration.cpp  TestCaseMessageReceiverConfiguration.cpp
MessageReceiver/src/ConfigurationParser/: TestCaseMessageReceiverConfigurationParser.cpp  TestCaseReceiverConfigurationParser.cpp
MessageReceiver/src/Listener/: VerifyingListener.cpp
MessageReceiver/src/MessageReceiver/: CMSMessageListener.cpp  CMSMessageListenerFactory.cpp  MessageCountingDecoratingReceiver.cpp  MessageDecoratingReceiver.cpp  MessageFileReceiver.cpp  TestMessageReceiver.cpp
MessageReceiver/src/Verifier/: MessageReceiverVerifier.cpp  MessageVerifier.cpp
MessageReceiver/src/utils/: MessageDestination.cpp
MessageReceiver2/: CMakeLists.txt
MessageReceiver2/Test/: CMakeLists.txt  main.cpp  test_message_receiver.config  test_message_receivers_all.config
MessageReceiver2/include/Configuration/: FileMessageCountingReceiverConfiguration.h  FileMessageDecoratingReceiverConfiguration.h  MessageCountingReceiverConfiguration.h  MessageReceiverConfiguration.h
MessageReceiver2/include/ConfigurationParser/: TestCaseReceiverConfigurationParser.h
MessageSender/: CMakeLists.txt
MessageSender/Test/: CMakeLists.txt  main.cpp  test_message_counting_sender.config  test_message_counting_sender_from_file.config  test_message_decorating_sender.config  test_message_decorating_sender_from_file.config  test_message_sender.config  test_message_sender_from_file.config  test_message_senders_all.config
TestEventHandler/: CMakeLists.txt
TestNotifier/: CMakeLists.txt
TestSuite/: CMakeLists.txt
TestSuite/TestSuite/: SingleTest.cpp  SingleTest.h  TestCase.h  TestCasePerformer.cpp  TestCasePerformer.h  TestCaseResult.cpp  TestCaseStatus.cpp  TestFrameworkException.cpp  TestFrameworkException.h  TestFunctionRegister.cpp  TestFunctionRegister.h  TestRunner.cpp  TestRunner.h
Testers/: CMakeLists.txt  main.cpp
Verifier/: CMakeLists.txt
Verifier/include/Verifier/: EventStatus.h  (+6 more)
common/: CMakeLists.txt
message-content/: CMakeLists.txt
message-content-verifier/: CMakeLists.txt
message-content/Test/: CMakeLists.txt  main.cpp  test_message_content.config  test_message_property_bool.config  test_message_property_float.config
message-decorator/: CMakeLists.txt
message-decorator/Test/: CMakeLists.txt  main.cpp
message-receiver/: CMakeLists.txt
message-receiver/Test/: CMakeLists.txt  main.cpp  test_message_counting_receiver.config  test_message_counting_receiver_to_file.config  test_message_decorating_counting_receiver.config  test_message_decorating_counting_receiver_to_file.config  test_message_receiver.config  test_message_receiver_to_file.config  test_message_receivers_all.config
message-sender/: CMakeLists.txt
message-sender/Test/: CMakeLists.txt  main.cpp  test_message_counting_sender.config  test_message_counting_sender_from_file.config  test_message_decorating_counting_sender.config  test_message_decorating_counting_sender_from_file.config  test_message_decorating_sender.config  test_message_decorating_sender_from_file.config  test_message_sender.config  test_message_senders_all.config
stonex-cms-amqp-test-engine/: CMakeLists.txt
stonex-cms-amqp-test-engine/Test/: CMakeLists.txt  developer_test.config  durable_subscription.config  main.cpp  test_case.config  test_case_all.config  test_case_all_receivers.config  test_case_all_senders.config  test_message_file1.txt  test_message_file2.txt  test_message_file3.txt  test_message_file4.txt  test_suite.config
stonex-cms-amqp-test-notifier/: CMakeLists.txt
stonex-cms-amqp-wrapper/: CMakeLists.txt
stonex-cms-amqp-wrapper/Test/: CMakeLists.txt  main.cpp  test_connection.config  test_session.config  test_wrapper.config
test-case-performer/: CMakeLists.txt
test-utils/: CMakeLists.txt
utils/: CMakeLists.txt
(+434 files in other folders)
